--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -767,13 +767,11 @@ $z$-Richtung, wohingegen die der rücklaufenden roten Welle abnimmt in entgegeng
 beschreiben also exponentiell gedämpfte Spiralen im Raum.
 
 Per Definition des Reflexionsfaktors~\eqref{eq:RFactor} gilt $\underline{U}_{r}(l) = - \underline{U}_{h}(l)$. Die
-rücklaufende Welle ist also um $\pi$ phasenverschoben gegenüber der hinlaufenden Teilwelle. Dies führt dazu, dass sich
-beide Wellen aufgrund der erwähnten Superposition stellenweise aufheben und daher kommt es für den verlustlosen Fall
-zur Ausbildung einer stehenden Welle. Dies ist auf Abbildung~\ref{WellenausbreitungVerlustlos} unten rechts gezeigt.
-
-
-, auf
-Abbildung~\ref{WellenausbreitungVerlustbehaftet} für den verlustbehafteten Fall, jeweils unten rechts, gezeigt.
+rücklaufende Welle ist also um $\pi$ phasenverschoben gegenüber der hinlaufenden Teilwelle. Dies führt im verlustlosen
+Fall dazu, dass sich beide Wellen aufgrund der erwähnten Superposition stellenweise gänzlich aufheben. Als Folge bilden
+sich stehende Wellen aus. Dies ist auf Abbildung~\ref{WellenausbreitungVerlustlos} unten rechts gezeigt. Beim
+verlustbehafteten Fall ist dies dagegen nicht der Fall aufgrund der Dämpfung. Allerdings heben sich beide Teilwellen am
+Leiterende auf, wie auf Abbildung~\ref{WellenausbreitungVerlustbehaftet}, unten rechts, gezeigt ist.
 
 Die Projektion der räumlichen Spiralen auf die $x/y$-Achse erlaubt eine Vereinfachung der Untersuchung der
 Wellenausbreitung, da diese Darstellung bereits alle wesentlichen Informationen erhält. Die Projektion beschreibt
