--- a/graphics/ErsatzSchaltbild4/document.tex
+++ b/graphics/ErsatzSchaltbild4/document.tex
@@ -8,68 +8,62 @@
 
 \begin{document}
 
-    \begin{circuitikz}[scale=0.75, transform shape]
+\begin{circuitikz}[scale=0.75, transform shape]
 
-        \tikzset{
-            charge/.style={fill=orange!10, draw=orange, circle, radius=0.4},
-            fieldline/.style={postaction={decorate}, decoration={markings}},
-            arrow/.style={decoration={mark=at position #1 with {\arrow{Stealth}}}},
-            reversearrow/.style={decoration={mark=at position #1 with {\arrowreversed{Stealth}}}}
-        }
+\tikzset{
+    charge/.style={fill=orange!10, draw=orange, circle, radius=0.4},
+    fieldline/.style={postaction={decorate}, decoration={markings}},
+    arrow/.style={decoration={mark=at position #1 with {\arrow{Stealth}}}},
+    reversearrow/.style={decoration={mark=at position #1 with {\arrowreversed{Stealth}}}}
+}
 
 
-        \def\componentWidth{10}
+\def\componentWidth{9}
 
-        \tikzset{line style/.style={solid, black}}
-        \tikzset{resistor label/.style={l=$R_{z}$}}
+\tikzset{line style/.style={solid, black}}
+\tikzset{resistor label/.style={l=$R_{z}$}}
 
-        \coordinate (A1) at (\componentWidth + 1, 3);
-        \coordinate (A2) at (\componentWidth + 3, 3);
-        \coordinate (B1) at (\componentWidth + 1, 0);
-        \coordinate (B2) at (\componentWidth + 3, 0);
-        \coordinate (C1) at (\componentWidth + 5, 3);
-        \coordinate (C2) at (\componentWidth + 8, 3);
-        \coordinate (D2) at (\componentWidth + 8, 0);
-        \coordinate (E1) at (\componentWidth + 10, 3);
-        \coordinate (E2) at (\componentWidth + 10, 0);
-        \coordinate (E3) at (\componentWidth + 12, 3);
-        \coordinate (E4) at (\componentWidth + 12, 0);
-        \coordinate (F1) at ($(B1) - (0, 2ex)$);
-        \coordinate (F2) at ($(E4) - (0, 2ex)$);
+\coordinate (A1) at (\componentWidth + 1, 3);
+\coordinate (A2) at (\componentWidth + 3, 3);
+\coordinate (B1) at (\componentWidth + 1, 0);
+\coordinate (B2) at (\componentWidth + 3, 0);
+\coordinate (C1) at (\componentWidth + 5, 3);
+\coordinate (C2) at (\componentWidth + 8, 3);
+\coordinate (D2) at (\componentWidth + 8, 0);
+\coordinate (E1) at (\componentWidth + 10, 3);
+\coordinate (E2) at (\componentWidth + 10, 0);
+\coordinate (F1) at ($(B1) - (0, 2ex)$);
+\coordinate (F2) at ($(E2) - (0, 2ex)$);
 
-        \draw[{Circle[open, fill=white]}-, fieldline, arrow=0.5, line style] (A1) -- (A2) node[pos=0.5, above] {$i$}
-        node[pos=0.2] (A3) {};
+% resistor
+\draw[line style] (A2) to[R, l=$\Delta R$, fill=black] (C1);
 
-        \draw[{Circle[open, fill=white]}-, line style] (B1) -- (B2) node[pos=0.2] (B3) {};
-        \draw[-{Circle[open, fill=white]}, line style] (B2) -- ($(D2) + (2pt, 0)$);
+% inductor
+\ctikzset{inductor=american}
+\draw[line style] (C1) to[L, l=$\Delta L$] (C2);
 
-        \draw[-Stealth, shorten <= 1ex, shorten >= 1ex, line style] ($(A1) + (2pt, 0)$) -- ($(B1) + (2pt, 0)$)
-        node[pos=0.5, left] {$u$};
-        \draw[-Stealth, shorten <= 1ex, shorten >= 1ex, line style] ($(E3) + (-2pt, 0)$) -- ($(E4) + (-2pt, 0)$)
-        node[pos=0.5, right] {$u + \mathrm{d} u$};
+% capacitor
+\draw[line style] ($(A2) - (2pt, 0)$) to[C, l=$\Delta C$] ($(B2) - (2pt, 0)$);
 
-        % resistor
-        \draw[line style] (A2) to[R, l=$\Delta R$, fill=black] (C1);
+% G
+\draw[line style] (C2) to[R, l=$\Delta G$] (D2);
 
-        % inductor
-        \ctikzset{inductor=american}
-        \draw[line style] (C1) to[L, l=$\Delta L$] (C2);
+\draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}, fieldline, arrow=0.5, line style] (A1) -- (A2)
+node[pos=0.5, above] {$i$} node[pos=0.2] (A3) {};
+\draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}, line style] (B1) -- (B2) node[pos=0.2] (B3) {};
+\draw[-Stealth, shorten <= 1ex, shorten >= 1ex, line style] ($(A1) + (2pt, 0)$) -- ($(B1) + (2pt, 0)$) node[pos=0.5,
+left] {$u$};
 
-        % capacitor
-        \draw[line style] (C2) to[C, l=$\Delta C$] (D2);
+\draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}, line style]  ($(C2) - (2pt, 0)$) -- (E1) node[pos=0.75,
+above] {$i + \mathrm{d} i$};
+\draw[-Stealth, shorten <= 1ex, shorten >= 1ex, line style] ($(E1) + (-2pt, 0)$) -- ($(E2) + (-2pt, 0)$) node[pos=0.5,
+right] {$u + \mathrm{d} u$};
 
-        \draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}, line style]  ($(C2) - (2pt, 0)$) --  ($(E1) +
-        (2pt, 0)$);
-        \draw[-{Circle[open, fill=white]}, line style] (D2) --  ($(E2) + (2pt, 0)$);
+\draw[-{Circle[open, fill=white]}, line style] (D2) -- (E2);
+\draw[-{Circle[open, fill=white]}, line style] (B2) -- ($(D2) + (2pt, 0)$);
 
-        % G
-        \draw[line style] (E1) to[R, l=$\Delta G$] (E2);
+\draw[Stealth-Stealth] (F1) -- (F2) node[pos=0.5, circle, fill=white, below] {$\Delta z$};
 
-        \draw[-{Circle[open, fill=white]}, line style] (E1) -- (E3) node[pos=0.75, above] {$i + \mathrm{d} i$};
-        \draw[-{Circle[open, fill=white]}, line style] (E2) -- (E4);
-
-        \draw[Stealth-Stealth] (F1) -- (F2) node[pos=0.5, circle, fill=white, below] {$\Delta z$};
-
-    \end{circuitikz}
+\end{circuitikz}
 
 \end{document}
